<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="12sp"
                android:paddingRight="12sp"
                android:background="@color/blue">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/but_back"
                        android:padding="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/blue"
                        android:src="@drawable/ic_previous"/>

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/tollbars"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:title="@string/city"
                        app:titleTextColor="@color/white" />



                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <EditText
                    android:id="@+id/ed_city"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:hint="@string/city_name"
                    android:textColorHint="@color/black"
                    android:backgroundTint="@color/black"
                    android:layout_marginBottom="10dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/but_weater"
                    android:layout_marginTop="10dp"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="@string/learn"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:background="@drawable/buttom"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/data_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp">


                <TextView
                    android:id="@+id/temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="°C"
                    android:textColor="@color/black"
                    android:layout_marginBottom="20dp"
                    android:textSize="76sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/country"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/state_code"
                            android:textSize="18sp"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/urban_name"
                            android:textSize="18sp"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/img_icon"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_baseline_cloud_24"/>



                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="70dp">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textColor="@color/grey"
                            android:textSize="16sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/speed"
                            android:textColor="@color/grey"
                            android:textSize="16sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/deg"
                            android:textColor="@color/grey"
                            android:textSize="16sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/timezon"
                            android:textColor="@color/grey"
                            android:textSize="16sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/humidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/data_typ"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/speed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/data_typ"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/deg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/data_typ"
                            android:textColor="@color/black"
                            android:textSize="16sp"/>

                        <TextView
                            android:id="@+id/timezon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/data_typ"
                            android:textColor="@color/black"
                            android:textSize="16sp"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>








</androidx.constraintlayout.widget.ConstraintLayout>